# labquiz

./: .gitignore  .readthedocs.yaml  Makefile  README.md  __init__.py  bump_version.py  hash_package.py  hashes.txt  pyproject.toml  requirements.txt
docs/: DemonstrationAndExercises.md  GoogleSheetPreparation.md  JupyterliteDeployment.md  ManualPreparationOfQuestionFile.md  Overview.md  ScoreAndCorrection.md  Security.md  Usage.md  index.md  introduction.md  labquiz_doc.md  labquiz_doc_en.md  myst.yml  question_file_structure.md  quiz_dash.md  quiz_editor.md
extras/: code.gs  example_create_secure_tar.py  labQuizDemo.ipynb  labQuizDemo_en.ipynb  labQuizDemo_en_binder.ipynb  quiz.tar.enc  test.yaml  zutils.py
extras/quiz_data/: __init__.py  zutils.py
src/: labquiz.po  labquiz.pot
src/labquiz/: __init__.py  i18n.py  main.py  make_language.mak  putils.py  utils.py
src/labquiz.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/labquiz/locales/: labquiz.pot
src/labquiz/locales/cn/LC_MESSAGES/: labquiz.mo  labquiz.po
src/labquiz/locales/de/LC_MESSAGES/: labquiz.mo  labquiz.po
src/labquiz/locales/es/LC_MESSAGES/: labquiz.mo  labquiz.po
src/labquiz/locales/fr/LC_MESSAGES/: labquiz.mo  labquiz.po
src/labquiz/locales/it/LC_MESSAGES/: labquiz.mo  labquiz.po
src/labquiz/locales/pt/LC_MESSAGES/: labquiz.mo  labquiz.po
src/labquiz/locales/tr/LC_MESSAGES/: labquiz.mo  labquiz.po
tests/: quiz.yaml  quiz_lab_en.yaml
