[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "labquiz"
version = "0.8.10"
description = "LabQuiz is a Python package that allows to integrate interactive quizzes directly into Jupyter notebooks — useful for labs, tutorials, practical assignments, continuous assessment, and controlled exams"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "J.-F. Bercher", email = "jf.bercher@esiee.fr" }
]
dependencies = [
    "ipywidgets>=7.6.5",
    "pyyaml",
    "cryptography",
    "ipython",
    "numpy",
    "pandas",
    "requests",
]
keywords = ["quizzes", "jupyter", "hash:d0d80b71341d72a2b09618880eaad885b6eee1895240b95e324e9a48ac43ca0a"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"labquiz" = ["**/*.mo", "**/*.po"]

[project.optional-dependencies]
demo = [
  "jupyterlab_myst",
]