[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "labquiz"
version = "0.9.3"
description = "LabQuiz is a Python package that allows to integrate interactive quizzes directly into Jupyter notebooks — useful for labs, tutorials, practical assignments, continuous assessment, and controlled exams"
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
authors = [
    { name = "J.-F. Bercher", email = "jf.bercher@esiee.fr" }
]
dependencies = [
    "ipywidgets>=7.6.5",
    "pyyaml",
    "cryptography",
    "ipython",
    "numpy",
    "pandas",
    "requests",
]
keywords = ["quizzes", "jupyter", "hash:c6029c10827e55bdf389b2c2504628293516f37c22e906e3a7c376f6afd3d2f2"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"labquiz" = ["**/*.mo", "**/*.po"]

[project.optional-dependencies]
demo = [
  "jupyterlab_myst",
]